crates/ars-components/src/selection/menu_bar/snapshots/ars_components__selection__menu_bar__tests__menu_bar_positioner.snap
---
source: crates/ars-components/src/selection/menu_bar/mod.rs
expression: "snapshot_attrs(&api.menu_positioner_attrs(&key(\"file\")))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "menu-positioner",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "menu-bar",
            ),
        ),
        (
            Id,
            String(
                "menu-bar-menu-file-positioner",
            ),
        ),
    ],
    styles: [],
}
