crates/ars-components/src/selection/menu_bar/snapshots/ars_components__selection__menu_bar__tests__menu_bar_root_default.snap
---
source: crates/ars-components/src/selection/menu_bar/mod.rs
expression: "snapshot_attrs(&service(Props::new().id(\"menu-bar\")).connect(&|_|\n{}).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "menu-bar",
            ),
        ),
        (
            Aria(
                Orientation,
            ),
            String(
                "horizontal",
            ),
        ),
        (
            Role,
            String(
                "menubar",
            ),
        ),
    ],
    styles: [],
}
